# SparseTagging

./: .codecov.yml  .dockerignore  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PR_DESCRIPTION.md  QUICKSTART.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.claude/: DEVELOPMENT_PLANS.md  KEY_PROMPTS_AND_PLANS.md  OTHER_SESSION_NOTES.md  PROMPTING_PATTERNS.md  QUICK_REFERENCE.md  SUMMARY_SESSION.md  settings.local.json
.claude/commands/: document-session.md
.github/: dependabot.yml
.github/scripts/: build_scan_report.py  extract-version.py
.github/scripts/generators/: readme_generator.py
.github/scripts/models/: scan_result.py
.github/scripts/parsers/: doc_parser.py  pytest_parser.py  quality_parser.py  smoke_test_parser.py  trivy_parser.py
.github/scripts/tests/: test_pytest_parser.py  test_quality_parser.py  test_readme_generator.py  (+1 more)
.github/workflows/: ci.yml  cve-tracker.yml
ScanResults/: artifact-summary.md  trivy-results.sarif
ScanResults/2026-01-06_20-19-59/: README.md  sbom.spdx.json  sonarcloud-links.md  trivy-report.txt
ScanResults/2026-01-06_21-57-03/: README.md  ruff-lint.txt  sbom.spdx.json  sonarcloud-links.md  test-summary.md  trivy-results.sarif
ScanResults/2026-01-06_22-49-39/: README.md  ruff-format.txt  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-06_23-16-01/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-07_20-24-05/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-07_20-48-23/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-07_21-57-00/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-07_23-09-21/: README.md  ruff-format.txt  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-08_17-44-08/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-09_22-47-31/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-09_23-39-56/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-11_03-32-06/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-11_03-38-53/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-12_02-19-15/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-12_23-30-21/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-13_13-50-41/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-13_19-08-25/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-18_05-46-01/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-18_14-28-47/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-18_15-43-15/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-18_15-54-17/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-18_20-14-54/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-18_20-30-50/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-18_20-44-20/: README.md  mypy-report.txt  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-19_01-28-48/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-19_09-43-26/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-23_22-29-34/: README.md  sbom.spdx.json  test-summary.md  trivy-results.sarif
ScanResults/2026-01-24_19-45-13/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-24_20-31-35/: README.md  sbom.spdx.json  test-summary.md  trivy-report.txt
ScanResults/2026-01-24_21-37-17/: README.md  ruff-lint.txt  sbom.spdx.json  test-summary.md  trivy-results.sarif
docs/: ARCHITECTURE.md  BUILD_PROCESS.md  CI_PIPELINE_OPTIMIZATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE_AI_PROMPTING.md  DEVOPS.md  INDEX.md  LLM_Planning_Guide.md  PERFORMANCE_SUMMARY.md  PROJECT_STATISTICS.md  Professional_Grade_Development_with_LLMs_TUTORIAL.md  QUICKSTART.md  README.md  REQUIREMENTS_GUIDE.md  REQUIREMENTS_UPDATE.md  TUTORIAL_DIAGRAMS_SLIDES.md  build-process.md  docker-usage.md  performance_report_large_20251222_140639.txt  performance_report_large_20251222_192528.txt  performance_report_medium_20251222_140629.txt  performance_report_medium_20251222_192516.txt  performance_report_small_20251222_140628.txt  performance_report_small_20251222_192515.txt
docs/Tutorials/: BUILD_PROCESS_Slides_v24_layout_variation_restored.pptx  CLAUDE_CODE_CHEAT_SHEET.20260121.md  LLM_Planning_Tutorial.md  LLM_Planning_Tutorial_v3_FIXES.pptx  LLM_Planning_Tutorial_v4-cgb.pptx  Professional_Grade_Development_with_LLMs_TUTORIAL.md  SparseTagging_Tutorial_Slide_Style_Guide_v1.docx  TUTORIAL_DIAGRAMS.md
docs/diagrams/: manifest.json
scripts/: build-docker.sh  fetch_sonar_issues.py
src/: __init__.py  basetag.py  basetag.py.v2.1.1.backup  benchmark.py  cache_manager.py  exceptions.py  sparse_protocol.py  sparsetag.py
tests/: conftest.py  test_cache_manager.py  test_critical_bugs.py  test_data_integrity.py  test_edge_cases.py  test_error_handling.py  test_exceptions.py  test_integration.py  test_performance.py  test_query_operations.py
tools/diagram-converter/: README.md  USAGE_EXAMPLE.md  convert_diagrams.py
(+7 files in other folders)
