[project]
name = "sparsetagging"
version = "2.4.0"
description = "High-performance sparse array library for tag confidence data with intelligent query caching"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.8.0",
    "psutil>=5.8.0",
]
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "SparseTag Contributors", email = "noreply@sparsetag.org"}]
keywords = ["sparse", "matrix", "tagging", "confidence", "query", "caching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/sparsetagging"
Documentation = "https://github.com/your-org/sparsetagging/blob/main/README.md"
Repository = "https://github.com/your-org/sparsetagging"
Changelog = "https://github.com/your-org/sparsetagging/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
strict_equality = true
allow_any_generics = true

[[tool.mypy.overrides]]
module = ["scipy.*", "psutil.*"]
ignore_missing_imports = true
