[project]
name = "sparsetagging"
version = "2.4.0"
description = "High-performance sparse array library for tag confidence data with intelligent query caching"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.8.0",
    "psutil>=5.8.0",
]
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "SparseTag Contributors", email = "noreply@sparsetag.org"}]
keywords = ["sparse", "matrix", "tagging", "confidence", "query", "caching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/sparsetagging"
Documentation = "https://github.com/your-org/sparsetagging/blob/main/README.md"
Repository = "https://github.com/your-org/sparsetagging"
Changelog = "https://github.com/your-org/sparsetagging/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sparsetagging"]
package-dir = {"sparsetagging" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
strict_equality = true
allow_any_generics = true

[[tool.mypy.overrides]]
module = ["scipy.*", "psutil.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports)
    "I",    # isort (import sorting)
    "N",    # pep8-naming conventions
    "UP",   # pyupgrade (modernize Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "C4",   # flake8-comprehensions (better comprehensions)
    "PIE",  # flake8-pie (unnecessary code)
    "RET",  # flake8-return (simplify returns)
    "SIM",  # flake8-simplify (simplify code)
    "PTH",  # flake8-use-pathlib (use pathlib)
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "PTH123",  # open() instead of Path.open() - not critical for this project
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # Magic values in tests are fine

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.run]
omit = [
    "src/benchmark.py",  # Benchmark script not part of library
    "tests/*",           # Don't measure test coverage
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
